resources/keycloak-development/07_open-ldap.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
      argocd.argoproj.io/sync-wave: "3"
  namespace: openldap
  name: openldap
spec:
  selector:
    matchLabels:
      app: ldap
  replicas: 1
  template:
    metadata:
      labels:
        app: ldap
    spec:
      serviceAccount: openldap
      containers:
        - name: container
          image: rroemhild/test-openldap
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
---
apiVersion: v1
kind: Service
metadata:
  annotations:
      argocd.argoproj.io/sync-wave: "4"
  name: openldap
  namespace: openldap
spec:
  selector:
    app: ldap
  ports:
    - protocol: TCP
      port: 10389
      targetPort: 10389
